// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ContentPane 1`] = `
<BasePane>
  <PrimaryArea
    width={6}
  />
  <SecondaryArea
    width={6}
  />
</BasePane>
`;

exports[`renders Dashboard 1`] = `
<Container
  className="Dashboard"
  fluid={true}
  style={
    Object {
      "backgroundColor": "#eff3fe",
      "color": "#000000",
    }
  }
>
  <style>
    
    .Dashboard .PrimaryArea .table {
        color: #000000;
    }

    .Dashboard .SecondaryArea .table {
        color: #000000;
    }

    .modal-dialog {
        background-color: white;
    }

    .modal-content {
        color: #000000;
        background-color: #eff3fe;
    }

    .Dashboard .form-control,
    .Dashboard .form-control[readonly] {
        background-color: #eff3fe;
        color: #000000;
    }

    .Dashboard a {
        color: #000000;
    }

    .Dashboard .Sidebar .MenuItem.active {
        background-color: #d8e2fd;
    }
    
  </style>
  <Row
    noGutters={true}
  >
    <Col
      md={2}
    >
      <div
        className="Sidebar"
        style={
          Object {
            "backgroundColor": "#ffffff",
            "boxShadow": "0 0 25px #3b6cf41a",
            "color": "#000000",
          }
        }
      >
        <Logo
          colorThemeType="light"
          shadowColor="#3b6cf41a"
        />
        <div
          className="MenuArea"
        >
          <Menu
            colorThemeType="light"
            items={Array []}
          />
          <MainMenu
            colorThemeType="light"
          />
          <Menu
            colorThemeType="light"
            items={Array []}
          />
        </div>
      </div>
    </Col>
  </Row>
</Container>
`;

exports[`renders FullWidthPane 1`] = `
<BasePane>
  <PrimaryArea
    width={12}
  />
</BasePane>
`;
